--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 
 html,
 body {
-  font-family:var(--font-inter),sans-serif;
+  font-family: var(--font-poppins), sans-serif;
   background-color: #f9fafb;
 }
 
@@ -97,6 +97,64 @@ body {
 .ck-content {
   ul,
   ol {
-    margin-left: 24px;
+    margin: 1em 0;
+    padding-left: 40px;
+    list-style-position: outside;
+  }
+
+  ul {
+    list-style-type: disc;
+
+    ul {
+      list-style-type: circle;
+
+      ul {
+        list-style-type: square;
+      }
+    }
+  }
+
+  ol {
+    list-style-type: decimal;
+
+    ol {
+      list-style-type: lower-alpha;
+
+      ol {
+        list-style-type: lower-roman;
+      }
+    }
+  }
+
+  li {
+    margin: 0.5em 0;
+  }
+
+  /* Ensure list markers are visible */
+  li::marker {
+    color: currentColor;
+  }
+
+  /* Blockquote styling */
+  blockquote {
+    margin: 1.5em 0;
+    padding: 1em 1.5em;
+    border-left: 4px solid var(--color-primary-300);
+    background-color: var(--color-primary-50);
+    font-style: italic;
+    color: var(--color-primary-900);
+    position: relative;
+  }
+
+  blockquote p {
+    margin: 0;
+    line-height: 1.6;
+  }
+
+  /* Nested blockquotes */
+  blockquote blockquote {
+    margin-left: 1em;
+    border-left-color: var(--color-secondary-300);
+    background-color: var(--color-secondary-50);
   }
 }
